# academic-keyword-occurrence

./: .gitignore  AcademicOccurence.ipynb  Dockerfile  LICENSE  README.md  README.md~  docker-compose.yml  extract_num_results.py~  extract_occurrences.py  input.csv  out.csv  pyproject.toml  table.org  table.org~  visualization.ipynb
academic-keyword-occurrence/: extract_occurrences.py  plot_bar.py
