[tool.poetry]
name = "academic-keyword-occurrence"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
pandas = "^1.4.2"
requests = "^2.28.0"
bs4 = "^0.0.1"
matplotlib = "^3.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
